UI Bug with Full Window mode #42754

Closed
opened 2014-11-29 03:32:55 +01:00 by Aaron Carlisle · 19 comments
Member

System Information
Windows 8.0 Intel HD Graphics 4600

Blender Version
Broken: 2.72b, 9e963ae
Worked: 2.49

Short description of error
When exiting full screen mode it changes the window from file browser to what ever it was before.
Exact steps for others to reproduce the error

  1. Open the default blender scene
  2. Take the 3d view port and turn it into a split screen.
  3. Change that split screen into the file browser
  4. Go into full screen mode (CTRL + Up Arrow)
  5. Then use the return to previous button (using the key board short cut works fine.
  6. The window will change back to the 3d view port
**System Information** Windows 8.0 Intel HD Graphics 4600 **Blender Version** Broken: 2.72b, 9e963ae Worked: 2.49 **Short description of error** When exiting full screen mode it changes the window from file browser to what ever it was before. **Exact steps for others to reproduce the error** 1. Open the default blender scene 2. Take the 3d view port and turn it into a split screen. 3. Change that split screen into the file browser 4. Go into full screen mode (CTRL + Up Arrow) 5. Then use the return to previous button (using the key board short cut works fine. 6. The window will change back to the 3d view port
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

#43008 was marked as duplicate of this issue

#43008 was marked as duplicate of this issue
Dalai Felinto was assigned by Bastien Montagne 2014-11-29 07:51:06 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Dalai, think this one is for you?

Dalai, think this one is for you?
Author
Member

I think what happened here is. Many times blender will open a file browser in full screen when selecting something such as a texture then returns to the previous ui which is different then from the users choice.

I think what happened here is. Many times blender will open a file browser in full screen when selecting something such as a texture then returns to the previous ui which is different then from the users choice.

This is prior to the fullscreen changes introduced in 7c25f16f (2.73). In fact the behaviour we have is different when you toggle fullscreen ('SCREEN_OT_screen_full_area') or you run 'SCREEN_OT_back_to_previous'.

This is prior to the fullscreen changes introduced in 7c25f16f (2.73). In fact the behaviour we have is different when you toggle fullscreen ('SCREEN_OT_screen_full_area') or you run 'SCREEN_OT_back_to_previous'.
Dalai Felinto removed their assignment 2014-12-02 19:18:06 +01:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto

To solve the bug as reported, all you need is this patch: P168

That said, this still doesn't solve another issue of having the 'file browser' editor being set to its previous type when you invoke an operator that requires file browser (e.g., with the mouse over the file browser editor press F2 to save the file and press cancel).

This is a bug that always existed in Blender I believe. I won't have the time to look at that any soon.

To solve the bug as reported, all you need is this patch: [P168](https://archive.blender.org/developer/P168.txt) That said, this still doesn't solve another issue of having the 'file browser' editor being set to its previous type when you invoke an operator that requires file browser (e.g., with the mouse over the file browser editor press F2 to save the file and press cancel). This is a bug that always existed in Blender I believe. I won't have the time to look at that any soon.
Author
Member

What needs to happen is that Blender needs to know if the ui changes was made by blender or the user.

So if blender is defining the ui change the fallow this code
if it is defined the user the fallow this code

What needs to happen is that Blender needs to know if the ui changes was made by blender or the user. So if blender is defining the ui change the fallow this code if it is defined the user the fallow this code
Aaron Carlisle self-assigned this 2014-12-05 16:06:38 +01:00
Aaron Carlisle changed title from UI Bug with full coming back from full screen mode to UI Bug with Full Window mode 2014-12-05 16:10:14 +01:00
Aaron Carlisle removed their assignment 2014-12-05 16:10:42 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@dfelinto, why don't we commit your patch, as it fixes the bug here and handle the rest as ToDo? I don't think we need bug reports for behaviours that are missing since ages

@dfelinto, why don't we commit your patch, as it fixes the bug here and handle the rest as ToDo? I don't think we need bug reports for behaviours that are missing since ages

Added subscriber: @Sergey

Added subscriber: @Sergey

@JulianEisel, before proposing to accept the patch it's nice to test it first. It is just broken. Try pressing F1 and then "Back to previous".

And i don't really think it is such a bug, just known behavior, so unless you want to look into a proper solution to the TODO list it should go.

@JulianEisel, before proposing to accept the patch it's nice to test it first. It is just broken. Try pressing F1 and then "Back to previous". And i don't really think it is such a bug, just known behavior, so unless you want to look into a proper solution to the TODO list it should go.
Author
Member

Added subscriber: @scottyp

Added subscriber: @scottyp
Author
Member

These are two differant bugs the first one is specific to the file browser the other is from a full window on a full window mode

These are two differant bugs the first one is specific to the file browser the other is from a full window on a full window mode

This issue was referenced by c6d28a94be

This issue was referenced by c6d28a94bee211c1d1ce41f364f5c026c4d759f0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c6d28a94be.

Closed by commit c6d28a94be.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42754
No description provided.