source/blender/makesdna/DNA_screen_types.h
@@ -272,12 +272,16 @@ typedef struct ARegion {
 // #define WIN_EQUAL		3  // UNUSED
 
 /* area->flag */
-#define HEADER_NO_PULLDOWN      (1 << 0)
-#define AREA_FLAG_DRAWJOINTO    (1 << 1)
-#define AREA_FLAG_DRAWJOINFROM  (1 << 2)
-#define AREA_TEMP_INFO          (1 << 3)
-#define AREA_FLAG_DRAWSPLIT_H   (1 << 4)
-#define AREA_FLAG_DRAWSPLIT_V   (1 << 5)
+enum {
+	HEADER_NO_PULLDOWN      = (1 << 0),
+	AREA_FLAG_DRAWJOINTO    = (1 << 1),
+	AREA_FLAG_DRAWJOINFROM  = (1 << 2),
+	AREA_TEMP_INFO          = (1 << 3),
+	AREA_FLAG_DRAWSPLIT_H   = (1 << 4),
+	AREA_FLAG_DRAWSPLIT_V   = (1 << 5),
+	/* used to check if we should switch back to prevspace (of a different type) */
+	AREA_FLAG_TEMP_TYPE	    = (1 << 6),
+};
 
 #define EDGEWIDTH	1
 #define AREAGRID	4
